[gd_scene load_steps=6 format=3 uid="uid://wob35ulaccic"]

[ext_resource type="PhysicsMaterial" uid="uid://b38crkealkwly" path="res://resource/Pap.tres" id="1_fabr0"]
[ext_resource type="PackedScene" uid="uid://b2qwnvo6no8ye" path="res://assets/blender/papcat.blend" id="1_jplww"]
[ext_resource type="Script" uid="uid://b72ualv8u1nam" path="res://pap.gd" id="1_m8o6e"]
[ext_resource type="AudioStream" uid="uid://bqycbvtxi64yw" path="res://assets/sound/pap0.wav" id="4_xdy0f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_jplww"]
size = Vector3(2.989996, 3.250459, 0.15)

[node name="Pap" type="Node3D"]
script = ExtResource("1_m8o6e")

[node name="HingeJoint3D" type="HingeJoint3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0211134, 0)
node_a = NodePath("RigidBody3D2")
node_b = NodePath("RigidBody3D")
exclude_nodes_from_collision = false

[node name="RigidBody3D" type="RigidBody3D" parent="HingeJoint3D"]
transform = Transform3D(-4.371139e-08, 0, 0.99999976, 0, 0.99999976, 0, -1, 0, -4.3711378e-08, -0.11365467, 0.46500003, 0)
physics_material_override = ExtResource("1_fabr0")
contact_monitor = true
max_contacts_reported = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HingeJoint3D/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1.0000056, 0, 0, 0, 1.0000056, 0, 1.307, 0)
shape = SubResource("BoxShape3D_jplww")

[node name="papcat" parent="HingeJoint3D/RigidBody3D" instance=ExtResource("1_jplww")]
transform = Transform3D(1, 0, 0, 0, 1.0000006, 0, 0, 0, 1.0000006, 0, -1.868, 0)

[node name="RigidBody3D2" type="RigidBody3D" parent="HingeJoint3D"]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, 0, -0.5, 0)
physics_material_override = ExtResource("1_fabr0")
contact_monitor = true
max_contacts_reported = 4

[node name="papcat" parent="HingeJoint3D/RigidBody3D2" instance=ExtResource("1_jplww")]
transform = Transform3D(-1, -8.742278e-08, 0, 8.742278e-08, -1, 0, 0, 0, 0.99999994, 0, 1.925, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HingeJoint3D/RigidBody3D2"]
transform = Transform3D(1, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, -0.0030487808, -1.1906104, 0.07400799)
shape = SubResource("BoxShape3D_jplww")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.94078565, 0)
stream = ExtResource("4_xdy0f")
max_polyphony = 5

[connection signal="body_entered" from="HingeJoint3D/RigidBody3D" to="." method="_on_rigid_body_3d_body_entered"]
[connection signal="body_exited" from="HingeJoint3D/RigidBody3D" to="." method="_on_rigid_body_3d_body_exited"]
[connection signal="body_entered" from="HingeJoint3D/RigidBody3D2" to="." method="_on_rigid_body_3d_body_entered"]
[connection signal="body_exited" from="HingeJoint3D/RigidBody3D2" to="." method="_on_rigid_body_3d_body_exited"]
